syntax.output
State 8 conflicts: 1 shift/reduce


Grammar

    0 $accept: Program $end

    1 Program: ExtDefList

    2 ExtDefList: ExDef ExtDefList
    3           | /* empty */

    4 ExDef: Specifier ExtDefList SEMI
    5      | Specifier SEMI
    6      | Specifier FunDec CompSt
    7      | error SEMI

    8 ExtDefList: VarDec
    9           | VarDec COMMA ExtDefList

   10 Specifier: TYPE
   11          | StructSpecifier

   12 StructSpecifier: STRUCT OptTag LC DefList RC
   13                | STRUCT Tag

   14 OptTag: ID
   15       | /* empty */

   16 Tag: ID

   17 VarDec: ID
   18       | VarDec LB INT RB

   19 FunDec: ID LP VarList RP
   20       | ID LP RP
   21       | error RP

   22 VarList: ParamDec COMMA VarList
   23        | ParamDec

   24 ParamDec: Specifier VarDec

   25 CompSt: LC DefList StmTList RC
   26       | error RC

   27 StmTList: Stmt StmTList
   28         | /* empty */

   29 Stmt: Exp SEMI
   30     | CompSt
   31     | RETURN Exp SEMI
   32     | IF LP Exp RP Stmt
   33     | IF LP Exp RP Stmt ELSE Stmt
   34     | WHILE LP Exp RP Stmt
   35     | error SEMI

   36 DefList: Def DefList
   37        | /* empty */

   38 Def: Specifier DecList SEMI
   39    | error SEMI

   40 DecList: Dec
   41        | Dec COMMA DecList

   42 Dec: VarDec
   43    | VarDec ASSIGNOP Exp

   44 Exp: Exp ASSIGNOP Exp
   45    | Exp AND Exp
   46    | Exp OR Exp
   47    | Exp RELOP Exp
   48    | Exp PLUS Exp
   49    | Exp MINUS Exp
   50    | Exp STAR Exp
   51    | Exp DIV Exp
   52    | LP Exp RP
   53    | MINUS Exp
   54    | NOT Exp
   55    | ID LP Args RP
   56    | ID LP RP
   57    | Exp LB Exp RB
   58    | Exp DOT ID
   59    | ID
   60    | INT
   61    | FLOAT
   62    | error RP

   63 Args: Exp COMMA Args
   64     | Exp


Terminals, with rules where they appear

$end (0) 0
error (256) 7 21 26 35 39 62
INT (258) 18 60
FLOAT (259) 61
ID (260) 14 16 17 19 20 55 56 58 59
SEMI (261) 4 5 7 29 31 35 38 39
COMMA (262) 9 22 41 63
ASSIGNOP (263) 43 44
RELOP (264) 47
PLUS (265) 48
MINUS (266) 49 53
STAR (267) 50
DIV (268) 51
AND (269) 45
OR (270) 46
DOT (271) 58
NOT (272) 54
TYPE (273) 10
LP (274) 19 20 32 33 34 52 55 56
RP (275) 19 20 21 32 33 34 52 55 56 62
LB (276) 18 57
RB (277) 18 57
LC (278) 12 25
RC (279) 12 25 26
STRUCT (280) 12 13
RETURN (281) 31
IF (282) 32 33
ELSE (283) 33
WHILE (284) 34
LOWER_THAN_ELSE (285)
LOWER_THAN_ERROR (286)
UNARY (287)


Nonterminals, with rules where they appear

$accept (33)
    on left: 0
Program (34)
    on left: 1, on right: 0
ExtDefList (35)
    on left: 2 3 8 9, on right: 1 2 4 9
ExDef (36)
    on left: 4 5 6 7, on right: 2
Specifier (37)
    on left: 10 11, on right: 4 5 6 24 38
StructSpecifier (38)
    on left: 12 13, on right: 11
OptTag (39)
    on left: 14 15, on right: 12
Tag (40)
    on left: 16, on right: 13
VarDec (41)
    on left: 17 18, on right: 8 9 18 24 42 43
FunDec (42)
    on left: 19 20 21, on right: 6
VarList (43)
    on left: 22 23, on right: 19 22
ParamDec (44)
    on left: 24, on right: 22 23
CompSt (45)
    on left: 25 26, on right: 6 30
StmTList (46)
    on left: 27 28, on right: 25 27
Stmt (47)
    on left: 29 30 31 32 33 34 35, on right: 27 32 33 34
DefList (48)
    on left: 36 37, on right: 12 25 36
Def (49)
    on left: 38 39, on right: 36
DecList (50)
    on left: 40 41, on right: 38 41
Dec (51)
    on left: 42 43, on right: 40 41
Exp (52)
    on left: 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61
    62, on right: 29 31 32 33 34 43 44 45 46 47 48 49 50 51 52 53 54
    57 58 63 64
Args (53)
    on left: 63 64, on right: 55 63


state 0

    0 $accept: . Program $end

    error   shift, and go to state 1
    ID      shift, and go to state 2
    TYPE    shift, and go to state 3
    STRUCT  shift, and go to state 4

    $end  reduce using rule 3 (ExtDefList)

    Program          go to state 5
    ExtDefList       go to state 6
    ExDef            go to state 7
    Specifier        go to state 8
    StructSpecifier  go to state 9
    VarDec           go to state 10


state 1

    7 ExDef: error . SEMI

    SEMI  shift, and go to state 11


state 2

   17 VarDec: ID .

    $default  reduce using rule 17 (VarDec)


state 3

   10 Specifier: TYPE .

    $default  reduce using rule 10 (Specifier)


state 4

   12 StructSpecifier: STRUCT . OptTag LC DefList RC
   13                | STRUCT . Tag

    ID  shift, and go to state 12

    $default  reduce using rule 15 (OptTag)

    OptTag  go to state 13
    Tag     go to state 14


state 5

    0 $accept: Program . $end

    $end  shift, and go to state 15


state 6

    1 Program: ExtDefList .

    $default  reduce using rule 1 (Program)


state 7

    2 ExtDefList: ExDef . ExtDefList

    error   shift, and go to state 1
    ID      shift, and go to state 2
    TYPE    shift, and go to state 3
    STRUCT  shift, and go to state 4

    $end  reduce using rule 3 (ExtDefList)
    SEMI  reduce using rule 3 (ExtDefList)

    ExtDefList       go to state 16
    ExDef            go to state 7
    Specifier        go to state 8
    StructSpecifier  go to state 9
    VarDec           go to state 10


state 8

    4 ExDef: Specifier . ExtDefList SEMI
    5      | Specifier . SEMI
    6      | Specifier . FunDec CompSt

    error   shift, and go to state 17
    ID      shift, and go to state 18
    SEMI    shift, and go to state 19
    TYPE    shift, and go to state 3
    STRUCT  shift, and go to state 4

    SEMI  [reduce using rule 3 (ExtDefList)]

    ExtDefList       go to state 20
    ExDef            go to state 7
    Specifier        go to state 8
    StructSpecifier  go to state 9
    VarDec           go to state 10
    FunDec           go to state 21


state 9

   11 Specifier: StructSpecifier .

    $default  reduce using rule 11 (Specifier)


state 10

    8 ExtDefList: VarDec .
    9           | VarDec . COMMA ExtDefList
   18 VarDec: VarDec . LB INT RB

    COMMA  shift, and go to state 22
    LB     shift, and go to state 23

    $default  reduce using rule 8 (ExtDefList)


state 11

    7 ExDef: error SEMI .

    $default  reduce using rule 7 (ExDef)


state 12

   14 OptTag: ID .
   16 Tag: ID .

    LC        reduce using rule 14 (OptTag)
    $default  reduce using rule 16 (Tag)


state 13

   12 StructSpecifier: STRUCT OptTag . LC DefList RC

    LC  shift, and go to state 24


state 14

   13 StructSpecifier: STRUCT Tag .

    $default  reduce using rule 13 (StructSpecifier)


state 15

    0 $accept: Program $end .

    $default  accept


state 16

    2 ExtDefList: ExDef ExtDefList .

    $default  reduce using rule 2 (ExtDefList)


state 17

    7 ExDef: error . SEMI
   21 FunDec: error . RP

    SEMI  shift, and go to state 11
    RP    shift, and go to state 25


state 18

   17 VarDec: ID .
   19 FunDec: ID . LP VarList RP
   20       | ID . LP RP

    LP  shift, and go to state 26

    $default  reduce using rule 17 (VarDec)


state 19

    5 ExDef: Specifier SEMI .

    $default  reduce using rule 5 (ExDef)


state 20

    4 ExDef: Specifier ExtDefList . SEMI

    SEMI  shift, and go to state 27


state 21

    6 ExDef: Specifier FunDec . CompSt

    error  shift, and go to state 28
    LC     shift, and go to state 29

    CompSt  go to state 30


state 22

    9 ExtDefList: VarDec COMMA . ExtDefList

    error   shift, and go to state 1
    ID      shift, and go to state 2
    TYPE    shift, and go to state 3
    STRUCT  shift, and go to state 4

    $end  reduce using rule 3 (ExtDefList)
    SEMI  reduce using rule 3 (ExtDefList)

    ExtDefList       go to state 31
    ExDef            go to state 7
    Specifier        go to state 8
    StructSpecifier  go to state 9
    VarDec           go to state 10


state 23

   18 VarDec: VarDec LB . INT RB

    INT  shift, and go to state 32


state 24

   12 StructSpecifier: STRUCT OptTag LC . DefList RC

    error   shift, and go to state 33
    TYPE    shift, and go to state 3
    STRUCT  shift, and go to state 4

    RC  reduce using rule 37 (DefList)

    Specifier        go to state 34
    StructSpecifier  go to state 9
    DefList          go to state 35
    Def              go to state 36


state 25

   21 FunDec: error RP .

    $default  reduce using rule 21 (FunDec)


state 26

   19 FunDec: ID LP . VarList RP
   20       | ID LP . RP

    TYPE    shift, and go to state 3
    RP      shift, and go to state 37
    STRUCT  shift, and go to state 4

    Specifier        go to state 38
    StructSpecifier  go to state 9
    VarList          go to state 39
    ParamDec         go to state 40


state 27

    4 ExDef: Specifier ExtDefList SEMI .

    $default  reduce using rule 4 (ExDef)


state 28

   26 CompSt: error . RC

    RC  shift, and go to state 41


state 29

   25 CompSt: LC . DefList StmTList RC

    error   shift, and go to state 33
    TYPE    shift, and go to state 3
    STRUCT  shift, and go to state 4

    INT     reduce using rule 37 (DefList)
    FLOAT   reduce using rule 37 (DefList)
    ID      reduce using rule 37 (DefList)
    MINUS   reduce using rule 37 (DefList)
    NOT     reduce using rule 37 (DefList)
    LP      reduce using rule 37 (DefList)
    LC      reduce using rule 37 (DefList)
    RC      reduce using rule 37 (DefList)
    RETURN  reduce using rule 37 (DefList)
    IF      reduce using rule 37 (DefList)
    WHILE   reduce using rule 37 (DefList)

    Specifier        go to state 34
    StructSpecifier  go to state 9
    DefList          go to state 42
    Def              go to state 36


state 30

    6 ExDef: Specifier FunDec CompSt .

    $default  reduce using rule 6 (ExDef)


state 31

    9 ExtDefList: VarDec COMMA ExtDefList .

    $default  reduce using rule 9 (ExtDefList)


state 32

   18 VarDec: VarDec LB INT . RB

    RB  shift, and go to state 43


state 33

   39 Def: error . SEMI

    SEMI  shift, and go to state 44


state 34

   38 Def: Specifier . DecList SEMI

    ID  shift, and go to state 2

    VarDec   go to state 45
    DecList  go to state 46
    Dec      go to state 47


state 35

   12 StructSpecifier: STRUCT OptTag LC DefList . RC

    RC  shift, and go to state 48


state 36

   36 DefList: Def . DefList

    error   shift, and go to state 33
    TYPE    shift, and go to state 3
    STRUCT  shift, and go to state 4

    INT     reduce using rule 37 (DefList)
    FLOAT   reduce using rule 37 (DefList)
    ID      reduce using rule 37 (DefList)
    MINUS   reduce using rule 37 (DefList)
    NOT     reduce using rule 37 (DefList)
    LP      reduce using rule 37 (DefList)
    LC      reduce using rule 37 (DefList)
    RC      reduce using rule 37 (DefList)
    RETURN  reduce using rule 37 (DefList)
    IF      reduce using rule 37 (DefList)
    WHILE   reduce using rule 37 (DefList)

    Specifier        go to state 34
    StructSpecifier  go to state 9
    DefList          go to state 49
    Def              go to state 36


state 37

   20 FunDec: ID LP RP .

    $default  reduce using rule 20 (FunDec)


state 38

   24 ParamDec: Specifier . VarDec

    ID  shift, and go to state 2

    VarDec  go to state 50


state 39

   19 FunDec: ID LP VarList . RP

    RP  shift, and go to state 51


state 40

   22 VarList: ParamDec . COMMA VarList
   23        | ParamDec .

    COMMA  shift, and go to state 52

    $default  reduce using rule 23 (VarList)


state 41

   26 CompSt: error RC .

    $default  reduce using rule 26 (CompSt)


state 42

   25 CompSt: LC DefList . StmTList RC

    error   shift, and go to state 53
    INT     shift, and go to state 54
    FLOAT   shift, and go to state 55
    ID      shift, and go to state 56
    MINUS   shift, and go to state 57
    NOT     shift, and go to state 58
    LP      shift, and go to state 59
    LC      shift, and go to state 29
    RETURN  shift, and go to state 60
    IF      shift, and go to state 61
    WHILE   shift, and go to state 62

    RC  reduce using rule 28 (StmTList)

    CompSt    go to state 63
    StmTList  go to state 64
    Stmt      go to state 65
    Exp       go to state 66


state 43

   18 VarDec: VarDec LB INT RB .

    $default  reduce using rule 18 (VarDec)


state 44

   39 Def: error SEMI .

    $default  reduce using rule 39 (Def)


state 45

   18 VarDec: VarDec . LB INT RB
   42 Dec: VarDec .
   43    | VarDec . ASSIGNOP Exp

    ASSIGNOP  shift, and go to state 67
    LB        shift, and go to state 23

    $default  reduce using rule 42 (Dec)


state 46

   38 Def: Specifier DecList . SEMI

    SEMI  shift, and go to state 68


state 47

   40 DecList: Dec .
   41        | Dec . COMMA DecList

    COMMA  shift, and go to state 69

    $default  reduce using rule 40 (DecList)


state 48

   12 StructSpecifier: STRUCT OptTag LC DefList RC .

    $default  reduce using rule 12 (StructSpecifier)


state 49

   36 DefList: Def DefList .

    $default  reduce using rule 36 (DefList)


state 50

   18 VarDec: VarDec . LB INT RB
   24 ParamDec: Specifier VarDec .

    LB  shift, and go to state 23

    $default  reduce using rule 24 (ParamDec)


state 51

   19 FunDec: ID LP VarList RP .

    $default  reduce using rule 19 (FunDec)


state 52

   22 VarList: ParamDec COMMA . VarList

    TYPE    shift, and go to state 3
    STRUCT  shift, and go to state 4

    Specifier        go to state 38
    StructSpecifier  go to state 9
    VarList          go to state 70
    ParamDec         go to state 40


state 53

   26 CompSt: error . RC
   35 Stmt: error . SEMI
   62 Exp: error . RP

    SEMI  shift, and go to state 71
    RP    shift, and go to state 72
    RC    shift, and go to state 41


state 54

   60 Exp: INT .

    $default  reduce using rule 60 (Exp)


state 55

   61 Exp: FLOAT .

    $default  reduce using rule 61 (Exp)


state 56

   55 Exp: ID . LP Args RP
   56    | ID . LP RP
   59    | ID .

    LP  shift, and go to state 73

    $default  reduce using rule 59 (Exp)


state 57

   53 Exp: MINUS . Exp

    error  shift, and go to state 74
    INT    shift, and go to state 54
    FLOAT  shift, and go to state 55
    ID     shift, and go to state 56
    MINUS  shift, and go to state 57
    NOT    shift, and go to state 58
    LP     shift, and go to state 59

    Exp  go to state 75


state 58

   54 Exp: NOT . Exp

    error  shift, and go to state 74
    INT    shift, and go to state 54
    FLOAT  shift, and go to state 55
    ID     shift, and go to state 56
    MINUS  shift, and go to state 57
    NOT    shift, and go to state 58
    LP     shift, and go to state 59

    Exp  go to state 76


state 59

   52 Exp: LP . Exp RP

    error  shift, and go to state 74
    INT    shift, and go to state 54
    FLOAT  shift, and go to state 55
    ID     shift, and go to state 56
    MINUS  shift, and go to state 57
    NOT    shift, and go to state 58
    LP     shift, and go to state 59

    Exp  go to state 77


state 60

   31 Stmt: RETURN . Exp SEMI

    error  shift, and go to state 74
    INT    shift, and go to state 54
    FLOAT  shift, and go to state 55
    ID     shift, and go to state 56
    MINUS  shift, and go to state 57
    NOT    shift, and go to state 58
    LP     shift, and go to state 59

    Exp  go to state 78


state 61

   32 Stmt: IF . LP Exp RP Stmt
   33     | IF . LP Exp RP Stmt ELSE Stmt

    LP  shift, and go to state 79


state 62

   34 Stmt: WHILE . LP Exp RP Stmt

    LP  shift, and go to state 80


state 63

   30 Stmt: CompSt .

    $default  reduce using rule 30 (Stmt)


state 64

   25 CompSt: LC DefList StmTList . RC

    RC  shift, and go to state 81


state 65

   27 StmTList: Stmt . StmTList

    error   shift, and go to state 53
    INT     shift, and go to state 54
    FLOAT   shift, and go to state 55
    ID      shift, and go to state 56
    MINUS   shift, and go to state 57
    NOT     shift, and go to state 58
    LP      shift, and go to state 59
    LC      shift, and go to state 29
    RETURN  shift, and go to state 60
    IF      shift, and go to state 61
    WHILE   shift, and go to state 62

    RC  reduce using rule 28 (StmTList)

    CompSt    go to state 63
    StmTList  go to state 82
    Stmt      go to state 65
    Exp       go to state 66


state 66

   29 Stmt: Exp . SEMI
   44 Exp: Exp . ASSIGNOP Exp
   45    | Exp . AND Exp
   46    | Exp . OR Exp
   47    | Exp . RELOP Exp
   48    | Exp . PLUS Exp
   49    | Exp . MINUS Exp
   50    | Exp . STAR Exp
   51    | Exp . DIV Exp
   57    | Exp . LB Exp RB
   58    | Exp . DOT ID

    SEMI      shift, and go to state 83
    ASSIGNOP  shift, and go to state 84
    RELOP     shift, and go to state 85
    PLUS      shift, and go to state 86
    MINUS     shift, and go to state 87
    STAR      shift, and go to state 88
    DIV       shift, and go to state 89
    AND       shift, and go to state 90
    OR        shift, and go to state 91
    DOT       shift, and go to state 92
    LB        shift, and go to state 93


state 67

   43 Dec: VarDec ASSIGNOP . Exp

    error  shift, and go to state 74
    INT    shift, and go to state 54
    FLOAT  shift, and go to state 55
    ID     shift, and go to state 56
    MINUS  shift, and go to state 57
    NOT    shift, and go to state 58
    LP     shift, and go to state 59

    Exp  go to state 94


state 68

   38 Def: Specifier DecList SEMI .

    $default  reduce using rule 38 (Def)


state 69

   41 DecList: Dec COMMA . DecList

    ID  shift, and go to state 2

    VarDec   go to state 45
    DecList  go to state 95
    Dec      go to state 47


state 70

   22 VarList: ParamDec COMMA VarList .

    $default  reduce using rule 22 (VarList)


state 71

   35 Stmt: error SEMI .

    $default  reduce using rule 35 (Stmt)


state 72

   62 Exp: error RP .

    $default  reduce using rule 62 (Exp)


state 73

   55 Exp: ID LP . Args RP
   56    | ID LP . RP

    error  shift, and go to state 74
    INT    shift, and go to state 54
    FLOAT  shift, and go to state 55
    ID     shift, and go to state 56
    MINUS  shift, and go to state 57
    NOT    shift, and go to state 58
    LP     shift, and go to state 59
    RP     shift, and go to state 96

    Exp   go to state 97
    Args  go to state 98


state 74

   62 Exp: error . RP

    RP  shift, and go to state 72


state 75

   44 Exp: Exp . ASSIGNOP Exp
   45    | Exp . AND Exp
   46    | Exp . OR Exp
   47    | Exp . RELOP Exp
   48    | Exp . PLUS Exp
   49    | Exp . MINUS Exp
   50    | Exp . STAR Exp
   51    | Exp . DIV Exp
   53    | MINUS Exp .
   57    | Exp . LB Exp RB
   58    | Exp . DOT ID

    DOT  shift, and go to state 92
    LB   shift, and go to state 93

    $default  reduce using rule 53 (Exp)


state 76

   44 Exp: Exp . ASSIGNOP Exp
   45    | Exp . AND Exp
   46    | Exp . OR Exp
   47    | Exp . RELOP Exp
   48    | Exp . PLUS Exp
   49    | Exp . MINUS Exp
   50    | Exp . STAR Exp
   51    | Exp . DIV Exp
   54    | NOT Exp .
   57    | Exp . LB Exp RB
   58    | Exp . DOT ID

    DOT  shift, and go to state 92
    LB   shift, and go to state 93

    $default  reduce using rule 54 (Exp)


state 77

   44 Exp: Exp . ASSIGNOP Exp
   45    | Exp . AND Exp
   46    | Exp . OR Exp
   47    | Exp . RELOP Exp
   48    | Exp . PLUS Exp
   49    | Exp . MINUS Exp
   50    | Exp . STAR Exp
   51    | Exp . DIV Exp
   52    | LP Exp . RP
   57    | Exp . LB Exp RB
   58    | Exp . DOT ID

    ASSIGNOP  shift, and go to state 84
    RELOP     shift, and go to state 85
    PLUS      shift, and go to state 86
    MINUS     shift, and go to state 87
    STAR      shift, and go to state 88
    DIV       shift, and go to state 89
    AND       shift, and go to state 90
    OR        shift, and go to state 91
    DOT       shift, and go to state 92
    RP        shift, and go to state 99
    LB        shift, and go to state 93


state 78

   31 Stmt: RETURN Exp . SEMI
   44 Exp: Exp . ASSIGNOP Exp
   45    | Exp . AND Exp
   46    | Exp . OR Exp
   47    | Exp . RELOP Exp
   48    | Exp . PLUS Exp
   49    | Exp . MINUS Exp
   50    | Exp . STAR Exp
   51    | Exp . DIV Exp
   57    | Exp . LB Exp RB
   58    | Exp . DOT ID

    SEMI      shift, and go to state 100
    ASSIGNOP  shift, and go to state 84
    RELOP     shift, and go to state 85
    PLUS      shift, and go to state 86
    MINUS     shift, and go to state 87
    STAR      shift, and go to state 88
    DIV       shift, and go to state 89
    AND       shift, and go to state 90
    OR        shift, and go to state 91
    DOT       shift, and go to state 92
    LB        shift, and go to state 93


state 79

   32 Stmt: IF LP . Exp RP Stmt
   33     | IF LP . Exp RP Stmt ELSE Stmt

    error  shift, and go to state 74
    INT    shift, and go to state 54
    FLOAT  shift, and go to state 55
    ID     shift, and go to state 56
    MINUS  shift, and go to state 57
    NOT    shift, and go to state 58
    LP     shift, and go to state 59

    Exp  go to state 101


state 80

   34 Stmt: WHILE LP . Exp RP Stmt

    error  shift, and go to state 74
    INT    shift, and go to state 54
    FLOAT  shift, and go to state 55
    ID     shift, and go to state 56
    MINUS  shift, and go to state 57
    NOT    shift, and go to state 58
    LP     shift, and go to state 59

    Exp  go to state 102


state 81

   25 CompSt: LC DefList StmTList RC .

    $default  reduce using rule 25 (CompSt)


state 82

   27 StmTList: Stmt StmTList .

    $default  reduce using rule 27 (StmTList)


state 83

   29 Stmt: Exp SEMI .

    $default  reduce using rule 29 (Stmt)


state 84

   44 Exp: Exp ASSIGNOP . Exp

    error  shift, and go to state 74
    INT    shift, and go to state 54
    FLOAT  shift, and go to state 55
    ID     shift, and go to state 56
    MINUS  shift, and go to state 57
    NOT    shift, and go to state 58
    LP     shift, and go to state 59

    Exp  go to state 103


state 85

   47 Exp: Exp RELOP . Exp

    error  shift, and go to state 74
    INT    shift, and go to state 54
    FLOAT  shift, and go to state 55
    ID     shift, and go to state 56
    MINUS  shift, and go to state 57
    NOT    shift, and go to state 58
    LP     shift, and go to state 59

    Exp  go to state 104


state 86

   48 Exp: Exp PLUS . Exp

    error  shift, and go to state 74
    INT    shift, and go to state 54
    FLOAT  shift, and go to state 55
    ID     shift, and go to state 56
    MINUS  shift, and go to state 57
    NOT    shift, and go to state 58
    LP     shift, and go to state 59

    Exp  go to state 105


state 87

   49 Exp: Exp MINUS . Exp

    error  shift, and go to state 74
    INT    shift, and go to state 54
    FLOAT  shift, and go to state 55
    ID     shift, and go to state 56
    MINUS  shift, and go to state 57
    NOT    shift, and go to state 58
    LP     shift, and go to state 59

    Exp  go to state 106


state 88

   50 Exp: Exp STAR . Exp

    error  shift, and go to state 74
    INT    shift, and go to state 54
    FLOAT  shift, and go to state 55
    ID     shift, and go to state 56
    MINUS  shift, and go to state 57
    NOT    shift, and go to state 58
    LP     shift, and go to state 59

    Exp  go to state 107


state 89

   51 Exp: Exp DIV . Exp

    error  shift, and go to state 74
    INT    shift, and go to state 54
    FLOAT  shift, and go to state 55
    ID     shift, and go to state 56
    MINUS  shift, and go to state 57
    NOT    shift, and go to state 58
    LP     shift, and go to state 59

    Exp  go to state 108


state 90

   45 Exp: Exp AND . Exp

    error  shift, and go to state 74
    INT    shift, and go to state 54
    FLOAT  shift, and go to state 55
    ID     shift, and go to state 56
    MINUS  shift, and go to state 57
    NOT    shift, and go to state 58
    LP     shift, and go to state 59

    Exp  go to state 109


state 91

   46 Exp: Exp OR . Exp

    error  shift, and go to state 74
    INT    shift, and go to state 54
    FLOAT  shift, and go to state 55
    ID     shift, and go to state 56
    MINUS  shift, and go to state 57
    NOT    shift, and go to state 58
    LP     shift, and go to state 59

    Exp  go to state 110


state 92

   58 Exp: Exp DOT . ID

    ID  shift, and go to state 111


state 93

   57 Exp: Exp LB . Exp RB

    error  shift, and go to state 74
    INT    shift, and go to state 54
    FLOAT  shift, and go to state 55
    ID     shift, and go to state 56
    MINUS  shift, and go to state 57
    NOT    shift, and go to state 58
    LP     shift, and go to state 59

    Exp  go to state 112


state 94

   43 Dec: VarDec ASSIGNOP Exp .
   44 Exp: Exp . ASSIGNOP Exp
   45    | Exp . AND Exp
   46    | Exp . OR Exp
   47    | Exp . RELOP Exp
   48    | Exp . PLUS Exp
   49    | Exp . MINUS Exp
   50    | Exp . STAR Exp
   51    | Exp . DIV Exp
   57    | Exp . LB Exp RB
   58    | Exp . DOT ID

    ASSIGNOP  shift, and go to state 84
    RELOP     shift, and go to state 85
    PLUS      shift, and go to state 86
    MINUS     shift, and go to state 87
    STAR      shift, and go to state 88
    DIV       shift, and go to state 89
    AND       shift, and go to state 90
    OR        shift, and go to state 91
    DOT       shift, and go to state 92
    LB        shift, and go to state 93

    $default  reduce using rule 43 (Dec)


state 95

   41 DecList: Dec COMMA DecList .

    $default  reduce using rule 41 (DecList)


state 96

   56 Exp: ID LP RP .

    $default  reduce using rule 56 (Exp)


state 97

   44 Exp: Exp . ASSIGNOP Exp
   45    | Exp . AND Exp
   46    | Exp . OR Exp
   47    | Exp . RELOP Exp
   48    | Exp . PLUS Exp
   49    | Exp . MINUS Exp
   50    | Exp . STAR Exp
   51    | Exp . DIV Exp
   57    | Exp . LB Exp RB
   58    | Exp . DOT ID
   63 Args: Exp . COMMA Args
   64     | Exp .

    COMMA     shift, and go to state 113
    ASSIGNOP  shift, and go to state 84
    RELOP     shift, and go to state 85
    PLUS      shift, and go to state 86
    MINUS     shift, and go to state 87
    STAR      shift, and go to state 88
    DIV       shift, and go to state 89
    AND       shift, and go to state 90
    OR        shift, and go to state 91
    DOT       shift, and go to state 92
    LB        shift, and go to state 93

    $default  reduce using rule 64 (Args)


state 98

   55 Exp: ID LP Args . RP

    RP  shift, and go to state 114


state 99

   52 Exp: LP Exp RP .

    $default  reduce using rule 52 (Exp)


state 100

   31 Stmt: RETURN Exp SEMI .

    $default  reduce using rule 31 (Stmt)


state 101

   32 Stmt: IF LP Exp . RP Stmt
   33     | IF LP Exp . RP Stmt ELSE Stmt
   44 Exp: Exp . ASSIGNOP Exp
   45    | Exp . AND Exp
   46    | Exp . OR Exp
   47    | Exp . RELOP Exp
   48    | Exp . PLUS Exp
   49    | Exp . MINUS Exp
   50    | Exp . STAR Exp
   51    | Exp . DIV Exp
   57    | Exp . LB Exp RB
   58    | Exp . DOT ID

    ASSIGNOP  shift, and go to state 84
    RELOP     shift, and go to state 85
    PLUS      shift, and go to state 86
    MINUS     shift, and go to state 87
    STAR      shift, and go to state 88
    DIV       shift, and go to state 89
    AND       shift, and go to state 90
    OR        shift, and go to state 91
    DOT       shift, and go to state 92
    RP        shift, and go to state 115
    LB        shift, and go to state 93


state 102

   34 Stmt: WHILE LP Exp . RP Stmt
   44 Exp: Exp . ASSIGNOP Exp
   45    | Exp . AND Exp
   46    | Exp . OR Exp
   47    | Exp . RELOP Exp
   48    | Exp . PLUS Exp
   49    | Exp . MINUS Exp
   50    | Exp . STAR Exp
   51    | Exp . DIV Exp
   57    | Exp . LB Exp RB
   58    | Exp . DOT ID

    ASSIGNOP  shift, and go to state 84
    RELOP     shift, and go to state 85
    PLUS      shift, and go to state 86
    MINUS     shift, and go to state 87
    STAR      shift, and go to state 88
    DIV       shift, and go to state 89
    AND       shift, and go to state 90
    OR        shift, and go to state 91
    DOT       shift, and go to state 92
    RP        shift, and go to state 116
    LB        shift, and go to state 93


state 103

   44 Exp: Exp . ASSIGNOP Exp
   44    | Exp ASSIGNOP Exp .
   45    | Exp . AND Exp
   46    | Exp . OR Exp
   47    | Exp . RELOP Exp
   48    | Exp . PLUS Exp
   49    | Exp . MINUS Exp
   50    | Exp . STAR Exp
   51    | Exp . DIV Exp
   57    | Exp . LB Exp RB
   58    | Exp . DOT ID

    ASSIGNOP  shift, and go to state 84
    RELOP     shift, and go to state 85
    PLUS      shift, and go to state 86
    MINUS     shift, and go to state 87
    STAR      shift, and go to state 88
    DIV       shift, and go to state 89
    AND       shift, and go to state 90
    OR        shift, and go to state 91
    DOT       shift, and go to state 92
    LB        shift, and go to state 93

    $default  reduce using rule 44 (Exp)


state 104

   44 Exp: Exp . ASSIGNOP Exp
   45    | Exp . AND Exp
   46    | Exp . OR Exp
   47    | Exp . RELOP Exp
   47    | Exp RELOP Exp .
   48    | Exp . PLUS Exp
   49    | Exp . MINUS Exp
   50    | Exp . STAR Exp
   51    | Exp . DIV Exp
   57    | Exp . LB Exp RB
   58    | Exp . DOT ID

    PLUS   shift, and go to state 86
    MINUS  shift, and go to state 87
    STAR   shift, and go to state 88
    DIV    shift, and go to state 89
    DOT    shift, and go to state 92
    LB     shift, and go to state 93

    $default  reduce using rule 47 (Exp)


state 105

   44 Exp: Exp . ASSIGNOP Exp
   45    | Exp . AND Exp
   46    | Exp . OR Exp
   47    | Exp . RELOP Exp
   48    | Exp . PLUS Exp
   48    | Exp PLUS Exp .
   49    | Exp . MINUS Exp
   50    | Exp . STAR Exp
   51    | Exp . DIV Exp
   57    | Exp . LB Exp RB
   58    | Exp . DOT ID

    STAR  shift, and go to state 88
    DIV   shift, and go to state 89
    DOT   shift, and go to state 92
    LB    shift, and go to state 93

    $default  reduce using rule 48 (Exp)


state 106

   44 Exp: Exp . ASSIGNOP Exp
   45    | Exp . AND Exp
   46    | Exp . OR Exp
   47    | Exp . RELOP Exp
   48    | Exp . PLUS Exp
   49    | Exp . MINUS Exp
   49    | Exp MINUS Exp .
   50    | Exp . STAR Exp
   51    | Exp . DIV Exp
   57    | Exp . LB Exp RB
   58    | Exp . DOT ID

    STAR  shift, and go to state 88
    DIV   shift, and go to state 89
    DOT   shift, and go to state 92
    LB    shift, and go to state 93

    $default  reduce using rule 49 (Exp)


state 107

   44 Exp: Exp . ASSIGNOP Exp
   45    | Exp . AND Exp
   46    | Exp . OR Exp
   47    | Exp . RELOP Exp
   48    | Exp . PLUS Exp
   49    | Exp . MINUS Exp
   50    | Exp . STAR Exp
   50    | Exp STAR Exp .
   51    | Exp . DIV Exp
   57    | Exp . LB Exp RB
   58    | Exp . DOT ID

    DOT  shift, and go to state 92
    LB   shift, and go to state 93

    $default  reduce using rule 50 (Exp)


state 108

   44 Exp: Exp . ASSIGNOP Exp
   45    | Exp . AND Exp
   46    | Exp . OR Exp
   47    | Exp . RELOP Exp
   48    | Exp . PLUS Exp
   49    | Exp . MINUS Exp
   50    | Exp . STAR Exp
   51    | Exp . DIV Exp
   51    | Exp DIV Exp .
   57    | Exp . LB Exp RB
   58    | Exp . DOT ID

    DOT  shift, and go to state 92
    LB   shift, and go to state 93

    $default  reduce using rule 51 (Exp)


state 109

   44 Exp: Exp . ASSIGNOP Exp
   45    | Exp . AND Exp
   45    | Exp AND Exp .
   46    | Exp . OR Exp
   47    | Exp . RELOP Exp
   48    | Exp . PLUS Exp
   49    | Exp . MINUS Exp
   50    | Exp . STAR Exp
   51    | Exp . DIV Exp
   57    | Exp . LB Exp RB
   58    | Exp . DOT ID
